# DataReady.io

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.yaml  main.py  nixpacks.toml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  MEDIUM_ARTICLES.md
src/: __init__.py
src/api/: __init__.py  dependencies.py  router.py
src/api/endpoints/: __init__.py  audio.py  interview.py  metadata.py  report.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  ai_reasoning.py  audio_processor.py  evaluation_engine.py  interview_orchestrator.py  report_generator.py
src/models/: __init__.py  evaluation.py  interview.py  question.py  report.py  roles.py
src/prompts/: __init__.py  evaluator.py  interviewer.py  report.py
static/: index.html  interview.html  report.html
static/css/: styles.css
static/js/: interview.js  report.js  setup.js
